--- a/pom.xml
+++ b/pom.xml
@@ -73,12 +73,14 @@
 	<build>
 		<plugins>
 			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
 					<encoding>UTF-8</encoding>
+          <compilerArgument>-parameters</compilerArgument>
 				</configuration>
 			</plugin>
 			<plugin>
