--- a/pom.xml
+++ b/pom.xml
@@ -7,22 +7,29 @@
 	<version>0.5.1-SNAPSHOT</version>
 	<name>tinyvalidator</name>
 	<description>Tiny validator library for Java 8</description>
+	<url>http://github.com/tokuhirom/tinyvalidator</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
-	<distributionManagement>
-		<repository>
-			<id>repo</id>
-			<url>https://github.com/tokuhirom/maven/raw/master/releases</url>
-		</repository>
-		<snapshotRepository>
-			<id>snapshot-repo</id>
-			<url>https://github.com/tokuhirom/maven/raw/master/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
+    <developers>
+        <developer>
+            <id>tokuhirom</id>
+            <name>Tokuhiro Matsuno</name>
+            <email>tokuhirom@gmail.com</email>
+            <url>https://twitter.com/tokuhirom</url>
+        </developer>
+		</developers>
+
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>http://www.opensource.org/licenses/mit-license.php</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
 	<scm>
 		<url>https://github.com/tokuhirom/tinyvalidator/</url>
@@ -30,12 +37,16 @@
 		<developerConnection>scm:git:git@github.com:tokuhirom/tinyvalidator.git</developerConnection>
 	</scm>
 
-	<repositories>
-		<repository>
-			<id>tokuhirom</id>
-			<url>https://tokuhirom.github.io/maven/releases/</url>
-		</repository>
-	</repositories>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 
 	<dependencies>
 		<dependency>
@@ -56,6 +67,7 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.14.4</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -84,6 +96,32 @@
 				</configuration>
 			</plugin>
 			<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>2.3</version>
+					<executions>
+							<execution>
+									<id>attach-sources</id>
+									<goals>
+											<goal>jar</goal>
+									</goals>
+							</execution>
+					</executions>
+			</plugin>
+			<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>2.9.1</version>
+					<executions>
+							<execution>
+									<id>attach-javadocs</id>
+									<goals>
+											<goal>jar</goal>
+									</goals>
+							</execution>
+					</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.5</version>
@@ -93,6 +131,36 @@
 						<buildDirectory>debug</buildDirectory>
 					</systemPropertyVariables>
 				</configuration>
+			</plugin>
+			<plugin>
+					<groupId>org.sonatype.plugins</groupId>
+					<artifactId>nexus-staging-maven-plugin</artifactId>
+					<version>1.6.3</version>
+					<extensions>true</extensions>
+					<configuration>
+							<serverId>ossrh</serverId>
+							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+					</configuration>
+			</plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.1</version>
+      </plugin>
+			<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-gpg-plugin</artifactId>
+					<version>1.5</version>
+					<executions>
+							<execution>
+									<id>sign-artifacts</id>
+									<phase>verify</phase>
+									<goals>
+											<goal>sign</goal>
+									</goals>
+							</execution>
+					</executions>
 			</plugin>
 		</plugins>
 	</build>
