--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>me.geso</groupId>
 	<artifactId>tinyvalidator</artifactId>
-	<version>0.5.1-SNAPSHOT</version>
+	<version>0.6.0</version>
 	<name>tinyvalidator</name>
 	<description>Tiny validator library for Java 8</description>
 	<url>http://github.com/tokuhirom/tinyvalidator</url>
@@ -35,7 +34,8 @@
 		<url>https://github.com/tokuhirom/tinyvalidator/</url>
 		<connection>scm:git:git://github.com/tokuhirom/tinyvalidator.git</connection>
 		<developerConnection>scm:git:git@github.com:tokuhirom/tinyvalidator.git</developerConnection>
-	</scm>
+	  <tag>tinyvalidator-0.6.0</tag>
+  </scm>
 
     <distributionManagement>
         <snapshotRepository>
